Closed Bug 646594 Opened 15 years ago Closed 15 years ago

TI: [infer failure] Missing type at #8:00116 pushed 0: float

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: crash, testcase)

Attachments

(1 file)

The attached testcase crashes on TI tip (unpack, chdir and run main with -n -a (only!)), tested on 64 bit.
Edge case where we didn't record the arithmetic overflow in an x.f++ because the value written to x.f (MIN_INT32) fits in an int32. This marks as overflows all inc/dec operations where the original value is not an integer that can inc/dec without overflow. http://hg.mozilla.org/projects/jaegermonkey/rev/4c4a64cb6582
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: