[INFER] Always mark overflows for slowpath incops, bug 646594.